# tap-instagram-user

./: .env.example  .gitignore  LICENSE  README.md  config.template.json  meltano.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: meta_api_reference.md  meta_api_reference.yaml
scripts/: api_candidates.yaml  introspect.py
tap_instagram_user/: __init__.py  __main__.py  client.py  streams.py  tap.py
tests/: __init__.py  conftest.py  test_core.py  test_discovery.py  test_media_window.py  test_partitions.py  test_streams.py
