[build-system]
requires = [
    "hatchling>=1,<2",
    "hatch-vcs>=0.5",
]
build-backend = "hatchling.build"

[project]
name = "plinxore-tap-instagram-user"
dynamic = ["version"]
description = "Singer tap for meta custom, built with the Meltano Singer SDK."
readme = "README.md"
authors = [{ name = "Ibrahim Gado Mayaki Hamza", email = "ibrahim.mayaki@plinxore.com" }]
keywords = [
    "ELT",
    "meta custom",
]
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
license = "Apache-2.0"
license-files = [ "LICENSE" ]
requires-python = ">=3.10"
dependencies = [
    "singer-sdk~=0.54.5",
    "requests~=2.34.0",
    "python-dateutil~=2.9",
    "typing-extensions>=4.5.0; python_version < '3.13'",
]

[project.optional-dependencies]
s3 = [
    "s3fs>=2026.1.0",
]

[project.scripts]
# CLI declaration
tap-instagram-user = "tap_instagram_user.tap:TapInstagramUser.cli"

[dependency-groups]
dev = [
    { include-group = "test" },
]
test = [
    "pytest>=9",
    "singer-sdk[testing]",
]
typing = [
    "mypy>=2.1",
    "ty>=0.0.41",
]
[tool.hatch.build.targets.wheel]
packages = [
    "tap_instagram_user",
]

[tool.hatch.version]
fallback-version = "0.1.0.dev0"
source = "vcs"

[tool.mypy]
enable_error_code = [
    "ignore-without-code",
    "redundant-expr",
    "truthy-bool",
]
warn_redundant_casts = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.ty.rules]
missing-override-decorator = "error"
unused-type-ignore-comment = "ignore"

[tool.pytest]
addopts = [
    "-ra",
]
filterwarnings = [
    "error",
    "once:No records were available to test:UserWarning",
    "once:Fields in transformed catalog but not in records:UserWarning",
]
log_level = "INFO"
minversion = "9"
strict = true
testpaths = [
    "tests",
]

[tool.ruff]
line-length = 100
required-version = ">=0.15"

[tool.ruff.lint]
future-annotations = true
ignore = [
    "COM812",  # missing-trailing-comma
]
select = ["ALL"]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
  "S101",  # assert is used by pytest
]

[tool.ruff.lint.pydocstyle]
convention = "google"

# This configuration can be used to customize tox environments
[tool.tox]
requires = [
    "tox>=4.53",
    "tox-uv>=1.35",
]
env_list = [
    "typing",
    { prefix = "3.", start = 10 },
]

[tool.tox.env_run_base]
description = "run tests on Python {env_name}"
runner = "uv-venv-lock-runner"
pass_env = [
    "CI",
    "TAP_INSTAGRAM_USER_*",
]
dependency_groups = [ "test" ]
commands = [ [ "pytest", { replace = "posargs", default = [ "tests" ], extend = true } ] ]

[tool.tox.env.typing]
description = "type checks"
dependency_groups = [ "test", "typing" ]
commands = [
    [ "mypy", { replace = "posargs", default = [ "tap_instagram_user", "tests" ], extend = true } ],
    [ "ty", "check", { replace = "posargs", default = [ "tap_instagram_user", "tests" ], extend = true } ],
]
