[build-system]
requires = [
    "hatchling>=1,<2",
    "hatch-vcs>=0.5",
]
build-backend = "hatchling.build"

[project]
name = "plinxore-tap-instagram-user"
dynamic = ["version"]
description = "Singer tap for the Meta Graph API (Instagram): account-level (user) insights and media with per-post insights, built with the Meltano Singer SDK."
readme = "README.md"
authors = [{ name = "Ibrahim Gado Mayaki Hamza", email = "ibrahim.mayaki@plinxore.com" }]
keywords = [
    "ELT",
    "meltano",
    "singer-io",
    "instagram",
    "meta",
]
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
license = "Apache-2.0"
license-files = [ "LICENSE" ]
requires-python = ">=3.10"
dependencies = [
    "singer-sdk~=0.54.5",
    "requests~=2.34.0",
    "python-dateutil~=2.9",
    "typing-extensions>=4.5.0; python_version < '3.13'",
]

[project.optional-dependencies]
s3 = [
    "s3fs>=2026.1.0",
]

[project.scripts]
# CLI declaration
tap-instagram-user = "tap_instagram_user.tap:TapInstagramUser.cli"

[dependency-groups]
dev = [
    { include-group = "test" },
]
test = [
    "pytest>=9",
    "singer-sdk[testing]",
]
typing = [
    "mypy>=2.1",
    "ty>=0.0.41",
    "types-python-dateutil~=2.9",
]
[tool.hatch.build.targets.wheel]
packages = [
    "tap_instagram_user",
]

[tool.hatch.version]
fallback-version = "0.1.0.dev0"
source = "vcs"

[tool.mypy]
enable_error_code = [
    "ignore-without-code",
    "redundant-expr",
    "truthy-bool",
]
warn_redundant_casts = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.ty.rules]
missing-override-decorator = "error"
unused-type-ignore-comment = "ignore"

[tool.pytest]
addopts = [
    "-ra",
]
filterwarnings = [
    "error",
    "once:No records were available to test:UserWarning",
    "once:Fields in transformed catalog but not in records:UserWarning",
    # singer-sdk emits an end-of-life warning on Python 3.10 (still supported
    # until 2026-10); don't let it fail the suite.
    "ignore:Python 3.10 will reach its end of life",
]
log_level = "INFO"
minversion = "9"
strict = true
testpaths = [
    "tests",
]

[tool.ruff]
line-length = 100
required-version = ">=0.15"
# Maintenance utilities (live-API introspection), not part of the package.
extend-exclude = ["scripts"]

[tool.ruff.lint]
future-annotations = true
ignore = [
    "COM812",   # missing-trailing-comma (conflicts with the formatter)
    # Conventions that don't fit a Singer SDK tap:
    "ANN401",   # `Any` is unavoidable on SDK-facing signatures (tap, kwargs, tokens)
    "RUF012",   # SDK class attributes (primary_keys, schema, ...) aren't ClassVar
    "ARG002",   # overridden SDK methods keep mandated but unused params (context, ...)
    "TRY003",   # long, explicit error messages are clearer than custom exceptions
    "EM101",    # ditto: string literals passed straight to exceptions
    "EM102",    # ditto: f-strings passed straight to exceptions
    "G004",     # f-strings in log messages are intentional and readable
    "DTZ011",   # date.today() is deliberate (date-only daily-window logic)
    "TC002",    # not worth splitting runtime imports into TYPE_CHECKING blocks
    "TC003",    # idem for stdlib imports
    "PLR0913",  # the per-metric override constructor legitimately takes many args
    "PLR2004",  # comparing against an HTTP status literal (400) is self-evident
    "FBT001",   # internal helper takes a positional bool by design
    "C901",     # the core partition/discovery logic is irreducibly branchy
    "PLR0912",  # discover_streams legitimately branches per optional stream family
]
select = ["ALL"]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
  "S101",     # assert is used by pytest
  "S105",     # fake tokens live in test config, not real secrets
  "D",        # docstrings are optional in tests (names are self-describing)
  "ANN",      # full type annotations are optional in tests
  "ARG",      # unused args occur in fixtures and lambda stubs
  "SLF001",   # tests legitimately exercise private members
  "PLR2004",  # magic values are fine in assertions
  "PLC0415",  # local imports are fine in tests
  "FBT",      # boolean positional args are fine in test helpers
]

[tool.ruff.lint.pydocstyle]
convention = "google"

# This configuration can be used to customize tox environments
[tool.tox]
requires = [
    "tox>=4.53",
    "tox-uv>=1.35",
]
env_list = [
    "typing",
    { prefix = "3.", start = 10 },
]

[tool.tox.env_run_base]
description = "run tests on Python {env_name}"
runner = "uv-venv-lock-runner"
pass_env = [
    "CI",
    "TAP_INSTAGRAM_USER_*",
]
dependency_groups = [ "test" ]
commands = [ [ "pytest", { replace = "posargs", default = [ "tests" ], extend = true } ] ]

[tool.tox.env.typing]
description = "type checks"
dependency_groups = [ "test", "typing" ]
commands = [
    [ "mypy", { replace = "posargs", default = [ "tap_instagram_user", "tests" ], extend = true } ],
    [ "ty", "check", { replace = "posargs", default = [ "tap_instagram_user", "tests" ], extend = true } ],
]
